# django_multitenant_rbac

./: LICENSE.txt  MANIFEST.in  README - ESP.md  README.md  pyproject.toml
sandbox/: admin.py  asgi.py  forms.py  middleware.py  models.py  settings.py  urls.py  views.py  wsgi.py
sandbox/management/commands/: setup_test_data.py
sandbox/migrations/: 0001_initial.py
sandbox/templates/: dashboard.html  member_form.html  member_list.html  role_confirm_delete.html  role_detail.html  role_form.html  role_list.html
tenant_rbac/: apps.py  forms.py  mixins.py  models.py  views.py
tenant_rbac/templatetags/: rbac_tags.py
