[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-multitenant-rbac"
version = "1.0.0"
authors = [
  { name="Josue Priego", email="josueygp@gmail.com" },
]
description = "A robust architecture for B2B SaaS applications in Django with isolated RBAC."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Django",
]
dependencies = [
    "django>=4.0",
    "django-multitenant>=4.1.1",
]

[project.urls]
"Homepage" = "https://github.com/josueygp/django_multitenant_rbac"
"Bug Tracker" = "https://github.com/josueygp/django_multitenant_rbac/issues"

[tool.setuptools.packages.find]
include = ["tenant_rbac*"]
exclude = ["sandbox*", "manage.py"]
